[package]
name = "material_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.0"
egui = "0.29.0"
egui_extras = { version = "0.29", features = ["file", "image"] }
image = { version = "0.25.5", features = ["jpeg"] } # Add the types you want support for
image-webp = {version = "0.2.1"}
egui_node_graph2 = {version = "0.7.0", features = ["persistence"]}
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
serde_json = "1.0"
egui_dock = "0.14.0"
